--- a/pages/index.css
+++ b/pages/index.css
@@ -49,7 +49,7 @@ position: relative;
 top: 120px;
 left: 10vh;
 }
-  button[type="submit"] {
+  button[type="button"] {
     background-color: #79A3FF;
     color: #fff;
     border: none;
@@ -60,7 +60,7 @@ left: 10vh;
     transition: background-color 0.2s;
   }
   
-  button[type="submit"]:hover {
+  button[type="button"]:hover {
     background-color: #0066FF;
   }
 
