--- a/pages/registro.css
+++ b/pages/registro.css
@@ -51,7 +51,7 @@ position: relative;
 top: 70px;
 left: 10vh;
 }
-button[type="submit"] {
+button[type="button"] {
   background-color: #79A3FF;
   color: #fff;
   border: none;
@@ -62,7 +62,7 @@ button[type="submit"] {
   transition: background-color 0.2s;
 }
 
-button[type="submit"]:hover {
+button[type="button"]:hover {
   background-color: #0066FF;
 }
 
