--- a/Veterinario/index.css
+++ b/Veterinario/index.css
@@ -203,9 +203,10 @@ a {
 }
 
 .citas-container-button {
-  height: 70%;
+  height: 50%;
   width: 40%;
   color: white;
+  font-size: 20px;
   /* width: 20px; */
   background-color: #79a3ff;
   border-style: solid;
@@ -213,10 +214,12 @@ a {
   border-radius: 18px;
   transition: 0.25s;
   text-align: center;
+
 }
 .citas-container-button:hover {
   height: 75%;
   width: 45%;
+  font-size: 30px;
   color: white;
   /* width: 20px; */
   background-color: #79a3ff;
