--- a/Veterinario/parasitologia.css
+++ b/Veterinario/parasitologia.css
@@ -770,6 +770,12 @@ textarea:active{
 	font-size: 25px;
 	margin-left: 10px;
 }
+.miC3 select{
+	width: 100%;
+	height: 50px;
+	font-size:100%;
+	text-align: center;
+}
 .miC4 p{
 	margin-left: 10px;
 	color:#444;
