--- a/Veterinario/reportes.css
+++ b/Veterinario/reportes.css
@@ -163,6 +163,118 @@ input{
     align-items: center;
 }
 
+.examenes{
+    position: relative;
+    margin-left: .1vw;
+    width: 60vw;
+    background-color: #EEEEEE;
+    height: 39vh;
+    border-radius: 1vw;
+    overflow: visible;
+    overflow-x: hidden;
+    padding: 15px;
+}
+
+.tabla-container-header {
+    width: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    color: #757272;
+  }
+  
+.tabla-container-parent {
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    border-collapse: collapse;
+    border-radius: 1vw;
+  }
+
+.tabla-container-header-columna-1 {
+    width: 16.6%;
+    padding-left: 1vw;
+  }
+.tabla-container-header-columna-2 {
+    width: 22.6%;
+    padding-left: 1vw;
+  }
+.tabla-container-header-columna-3 {
+    width: 12.6%;
+    padding-left: 1vw;
+  }
+.tabla-container-header-columna-4 {
+    width: 12.6%;
+    padding-left: 1vw;
+  }
+.tabla-container-header-columna-5 {
+    width: 12.6%;
+    padding-left: 1vw;
+  }
+.tabla-container-header-columna-6 {
+    width: 10.6%;
+    padding-left: 1vw;
+  }
+.tabla-container-body-columna-1 {
+  width: 16.6%;
+  padding-left: 1vw;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+.tabla-container-body-columna-2 {
+  width: 22.6%;
+  padding-left: 1vw;
+}
+.tabla-container-body-columna-3 {
+  width: 12.6%;
+  padding-left: 1vw;
+}
+.tabla-container-body-columna-4 {
+  width: 12.6%;
+  padding-left: 1vw;
+}
+.tabla-container-body-columna-5 {
+  width: 12.6%;
+  padding-left: 1vw;
+}
+.tabla-container-body-columna-6 {
+  width: 10.6%;
+  padding-left: 1vw;
+}
+.tabla-card {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    box-shadow: 0px 0px 6px 4px rgba(150, 150, 150, 0.26);
+    margin-bottom: 5px;
+    border-radius: 1vw;
+  }
+.tabla-card:nth-child(odd) {
+    background-color: #FFFFFF; /* Color blanco para los elementos impares */
+  }
+  
+.tabla-card:nth-child(even) {
+    background-color: #C9DAFF; /* Color azul para los elementos pares */
+  }
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+::-webkit-scrollbar-track {
+    background-color: #d9d9d9;
+    border-radius: 10px;
+  }
+  
+::-webkit-scrollbar-thumb {
+    background: #79a3ff;
+    border-radius: 10px;
+  }
+  
+::-webkit-scrollbar-thumb:hover {
+    background: #5d83d6;
+  }
+
 canvas{
     margin-left: 43px;
 }
